--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello from AWS!</title>
+    <title>Hello from AWS CodeBuild!</title>
   </head>
   <body>
     <h1>Hello, World! 🎉</h1>
