--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Hello from AWS CodeBuild!</title>
   </head>
   <body>
-    <h1>Hello, World! from CodeBuild</h1>
+    <h1>Hello, World! day2</h1>
   </body>
 </html>
